samples/_failures_safe/1761288916_1fdb9f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_06246c4e.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_06246c4e.c:161:9: error: expected expression at end of input
  161 |         queue_destroy(&
      |         ^~~~~~~~~~~~~
./samples/SAFE/__tmp_06246c4e.c:161:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_06246c4e.c:161:9: error: expected declaration or statement at end of input
